--- a/Optimization_methods.ipynb
+++ b/Optimization_methods.ipynb
@@ -693,7 +693,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Learning Rate Decay and Scheduling"
+    "# Exponential Learning Rate Decay"
    ]
   },
   {
@@ -791,6 +791,15 @@
     "    plt.show()\n",
     "\n",
     "    return parameters"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Exponential learning rate decay:\n",
+    "\n",
+    "$$\\alpha = \\frac{1}{1 + decayRate \\times epochNumber} \\alpha_{0}$$"
    ]
   },
   {
@@ -892,6 +901,15 @@
     "axes.set_xlim([-1.5,2.5])\n",
     "axes.set_ylim([-1,1.5])\n",
     "plot_decision_boundary(lambda x: predict_dec(parameters, x.T), train_X, train_Y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Learning rate using exponential weight decay with fixed interval scheduling\n",
+    "\n",
+    "$$\\alpha = \\frac{1}{1 + decayRate \\times \\lfloor\\frac{epochNum}{timeInterval}\\rfloor} \\alpha_{0}$$"
    ]
   },
   {
